--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
   "homepage": "https://github.com/eggheadio-github/stack-overflow-copy-paste#readme",
   "devDependencies": {
     "ava": "0.11.0",
-    "babel-cli": "6.4.5",
+    "babel-cli": "^6.26.0",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-stage-2": "6.3.13",
-    "babel-register": "6.4.3",
+    "babel-register": "^6.26.0",
     "codecov.io": "0.1.6",
-    "commitizen": "2.5.0",
+    "commitizen": "^4.0.3",
     "cz-conventional-changelog": "1.1.5",
-    "eslint": "1.10.3",
+    "eslint": "^6.6.0",
     "eslint-config-kentcdodds": "5.0.1",
     "ghooks": "1.0.3",
-    "nodemon": "1.8.1",
-    "nyc": "5.5.0",
+    "nodemon": "^1.19.4",
+    "nyc": "^14.1.1",
     "rimraf": "2.5.1",
-    "semantic-release": "4.3.5",
+    "semantic-release": "^15.13.30",
     "validate-commit-msg": "1.1.1"
   },
   "config": {
