--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ branches:
 notifications:
   email: false
 node_js:
-  - 4
+  - 10
 before_install:
-  - npm i -g npm@^3.0.0
+  - npm i -g npm
 before_script:
   - npm prune
 script:
